tests/error/tensor_errors/poly_tensor.err
Error: Unsupported (at $FILE:11:11)
   | 
 9 | @guppy
10 | def main() -> int:
11 |     return (foo, foo)(42, 42)
   |            ^^^^^^^^^^ Polymorphic function tensors are not supported

Guppy compilation failed due to 1 previous error
